--- a/zoo-css-challenge/index.html
+++ b/zoo-css-challenge/index.html
@@ -10,7 +10,7 @@
  			id="logo"
  			>
  		<nav>
- 			<ul>
+ 			<ul> 
  				<li>Directions</li>
  				<li>Food & Drink</li>
  				<li>Education</li>
@@ -21,6 +21,7 @@
  	<main>
  		<section class="introduction">
  			<h1>Birmingham Zoo</h1>
+			 <p>‘The zoo is open every day of the year and features three major biomes: the Tropic Zone, Temperate Territory, and the Polar Circle. From tropical birds, to snow leopards, grizzly bears, and one of the nation’s largest colonies of Antarctic penguins, there are animals to enjoy in every season.’</p>
  		</section>
 
  		<div id="badge">
@@ -51,8 +52,7 @@
 		</section>
 
 		<section class="tigers">
-			<h2>Tiger</h2>
-			<h3>Top 5 Tiger Facts</h3>
+			<h2>Date of Tigers</h2>
 			<ol>
 				<li>Tigers are the largest cat species in the world reaching up to 3.3 meters in length and weighing up to 670 pounds!
 				<li>Tigers are easily recognizable with their dark vertical stripes and reddish/orange fur.
@@ -65,7 +65,7 @@
 		<section class="giraffe">
 			<h2>Giraffe</h2>
 
-			<p>Giraffes are the world's tallest mammals, thanks to their towering legs and long necks. A giraffe's legs alone are taller than many humans—about 6 feet . These long legs allow giraffes to run as fast as 35 miles an hour over short distances and cruise comfortably at 10 miles an hour over longer distances.</p>
+			<p style="font-size: 20px;">Giraffes are the world's tallest mammals, thanks to their towering legs and long necks. A giraffe's legs alone are taller than many humans—about 6 feet . These long legs allow giraffes to run as fast as 35 miles an hour over short distances and cruise comfortably at 10 miles an hour over longer distances.</p>
 
 			<h3>Behavior</h3>
 
@@ -90,6 +90,11 @@
 				<h4>Learning about the rainforest</h4>
 				<a>Find out More</a>
 			</div>
+			<div class="card">
+				<time>2010-04-12</time>
+				<h4>‘Which big cat are you?’</h4>
+				<a>Find out More</a>
+			</div>
 		</section>
 
 		<section class="education">
@@ -110,15 +115,15 @@
 			<h2>Programs</h2>
 			<div class="card">
 				<h4>Children and Family Programs</h4>
-				<a>Find out More</a>
+				<a href="#">Find out More</a>
 			</div>
 			<div class="card">
 				<h4>Adult Programs</h4>
-				<a>Find out More</a>
+				<a href="#">Find out More</a>
 			</div>
 			<div class="card">
 				<h4>Youth and young adults</h4>
-				<a>Find out More</a>
+				<a href="#">Find out More</a>
 			</div>
 			<h3>Useful Links</h3>
 			<p>
